updated fig size

--- a/index.html
+++ b/index.html
@@ -234,9 +234,11 @@
 						<h3 id="heading_mmWave_mobility"></h3>
 						<div class="features-row">
 							<!-- <h3>5G mmWave</h3>	 -->
-							<section>
+							<!-- <section>
 								<embed src="images/performance_plots/United States of America/mobility.jpg" width="230%" height="250%" />
-							</section>
+							</section> -->
+							<embed src="images/performance_plots/United States of America/mobility.jpg" width="100%" height="100%" />
+
 						</div>
 					</section>
 					<section class="box special features">
@@ -257,9 +259,11 @@
 						<h3 id="heading_sub6_mobility"></h3>
 						<div class="features-row">
 							<!-- <h3>5G mmWave</h3>	 -->
-							<section>
+							<!-- <section>
 								<embed src="images/performance_plots/United States of America/mobility_sub6.jpg" width="230%" height="250%" />
-							</section>
+							</section> -->
+							<embed src="images/performance_plots/United States of America/mobility_sub6.jpg" width="100%" height="100%" />
+
 						</div>
 					</section>
 					<!-- LTE -->
@@ -281,9 +285,11 @@
 						<h3 id="heading_lte_mobility"></h3>
 						<div class="features-row">
 							<!-- <h3>5G mmWave</h3>	 -->
-							<section>
+							<!-- <section>
 								<embed src="images/performance_plots/United States of America/mobility_lte.jpg" width="230%" height="250%" />
-							</section>
+							</section> -->
+							<embed src="images/performance_plots/United States of America/mobility_lte.jpg" width="100%" height="100%" />
+
 						</div>
 					</section>
 					<!-- LTE end -->
